# stargazer

./: .gitignore  CMakeLists.txt  README.md
data/: cam_input_example.txt  img_example.txt  img_test.txt
include/: cam_input.h  catalogue.h  catalogue_io.h  config.h  coordinate.h  core.h  image_generator.h  match.h  math_util.h  matrix.h  navi_star_filter.h  navi_star_list_io.h
scripts/: unit_sphere.py
src/: CMakeLists.txt  simulator.cpp
src/io/: CMakeLists.txt  cam_input.cpp  catalogue_io.cpp  catalogue_io.h  io_test.cpp  navi_star_list_io.cpp
src/match/: CMakeLists.txt  match.cpp  navi_star_filter.cpp
src/math/: CMakeLists.txt  array.cpp  array.h  coordinate.cpp  math_definition.h  math_test.cpp  math_util.h
src/solver/: CMakeLists.txt  coordinate.cpp  math_util.cpp  navi_star_filter.cpp
src/test/: CMakeLists.txt  catalogue_io_demo.cpp  image_generator.cpp  io_test.cpp
src/v_cam/: CMakeLists.txt
